don't bother scanning nonexistent data (tdf#141182)

There's no point scanning for non-empty cells after the last data
cell, and this avoids processing mdds structures (such as repeated
creating of flat_segment_tree).

Change-Id: Ibec324aa2de457e8439c38a561f55ced9f478899